// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cancels at package selection without changing the filesystem 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
■  Which packages should be configured?
│
└  Operation failed. No files were changed. Exiting - maybe another time? 👋

"
`;

exports[`cancels at the registry prompt without changing the filesystem 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  Registry URL for packages without one
│  https://registry.example.com/
└
■  Registry URL for packages without one
│
└  Operation failed. No files were changed. Exiting - maybe another time? 👋

"
`;

exports[`cancels at the root prompt without changing the filesystem 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
■  Where should package.json files be searched for?
│  ./
│
└  Operation failed. No files were changed. Exiting - maybe another time? 👋

"
`;

exports[`cancels the shared registry prompt after planning with zero writes 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 2 package.json files.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ alpha/package.json
│  ◻ beta/package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◼ ALL (Configure every package)◇  Which packages should be configured?
│  ALL
│
◆  Registry URL for packages without one
│  https://registry.example.com/
└
■  Registry URL for packages without one
│
└  Operation failed. No files were changed. Exiting - maybe another time? 👋

"
`;
